ASEM/src/langB.java
/* Generated By:JavaCC: Do not edit this line. langB.java */
package parser;

import java.io.*;
import recovery.*;
import syntacticTree.*;
import semanalysis.*;

public class langB implements langBConstants {
final static String Version = "X++ Compiler - Version 1.0 - 2004";
int contParseError = 0;           // contador de erros sintáticos
boolean debug_recovery;   // controla verbose de recuperação de erros
Token lastError = null;


// Define o método "main" da classe langB.  
  public  static void main(String args[]) throws ParseException
  {
  boolean debug_as = false;
  boolean debug_recovery = false;
  boolean print_tree = false;

    String filename = ""; // nome do arquivo a ser analisado
    langB parser;     // analisador léxico/sintático
    int i;
    boolean ms = false;

    System.out.println(Version);
    // lê os parâmetros passados para o compilador
    for (i = 0; i < args.length - 1; i++)
    {
        if (args[i].equals("-debug_AS") )
            debug_as = true;
        else
        if (args[i].equals("-debug_recovery") )
            debug_recovery = true;
        else
        if (args[i].equals("-print_tree") )
            print_tree = true;
        else
        {
            System.out.println("Usage is: java langB [-debug_AS] " +
             "[-debug_recovery] inputfile");
            System.exit(0);
        }
    }

    if (args[i].equals("-"))
    {       // lê da entrada padrão      
        System.out.println("Reading from standard input . . .");
        parser = new langB(System.in); // cria AS
     }
     else
    {       // lê do arquivo
        filename = args[args.length-1];
        System.out.println("Reading from file " + filename + " . . .");
        try {  // cria AS
            parser = new langB(new java.io.FileInputStream(filename));
        }
    catch (java.io.FileNotFoundException e) {
               System.out.println("File " + filename + " not found.");
        return;
        }
    }

    ListNode root = null;
    parser.debug_recovery = debug_recovery;
    if (! debug_as) parser.disable_tracing(); // desab. verbose do AS
    try {
        root = parser.program();   // chama o método que faz a análise
    }
    catch (ParseEOFException e)
    {
    System.err.println(e.getMessage());
    }
    finally {
        System.out.println(parser.token_source.foundLexError() +
                                " Lexical Errors found");
        System.out.println(parser.contParseError + " Syntactic Errors found");
     }

    if ( parser.token_source.foundLexError() // verifica se pode operar sobre a árvore sintática
          + parser.contParseError == 0)
    {
        if (print_tree) // exibir a árvore
        {
            PrintTree prt = new PrintTree();
            prt.printRoot(root);     // chama método para imprimir árvore
        }
        TypeCheck tc = new TypeCheck();
        try {
             tc.TypeCheckRoot(root);
             System.out.println("0 Semantic Errors found");
        }
        catch (SemanticException e)
        {
            System.out.println(e.getMessage());
        }
   }

}  // main

static public String im(int x)
{
int k;
String s;
   s = tokenImage[x];
   k = s.lastIndexOf("\u005c"");
   try {s = s.substring(1,k);}
   catch (StringIndexOutOfBoundsException e)
   {}
   return s;
}


boolean eof;    // variável que indica se EOF foi alcançado
// o método abaixo consome tokens até alcançar um que pertença ao conjunto
// de sincronização

void consumeUntil(RecoverySet g,
                 ParseException e,
                 String met) throws ParseEOFException,
                                    ParseException
{
Token tok;

   if ( debug_recovery) // informação sobre a recuperação
   {
       System.out.println();
       System.out.println("*** " + met + " ***");
       System.out.println("     Syncronizing Set: " + g);
   }

   if (g == null) throw e; // se o conjunto é null, propaga a exceção

   tok = getToken(1); // pega token corrente
   while ( ! eof )  // se não chegou ao fim do arquivo
   {
        if ( g.contains(tok.kind ) ) //achou um token no conjunto
        {
             if ( debug_recovery)
               System.out.println("     Found syncronizing token: " +
                                   im(tok.kind));
             break;
        }
        if (debug_recovery)
             System.out.println("     Ignoring token: " + im(tok.kind));
        getNextToken();     // pega próximo token       
        tok = getToken(1);
        if (tok.kind == EOF && ! g.contains(EOF) ) // fim da entrada?   
            eof = true;
    }
   if ( tok != lastError)
   {
        System.out.println(e.getMessage());
        lastError = tok;
        contParseError++;  // incrementa número de erros
   }
   if ( eof ) throw new ParseEOFException("EOF found prematurely.");
}

  final public ListNode program() throws ParseException, ParseEOFException {
    trace_call("program");
    try {
  RecoverySet g = First.program;
  ListNode l = null, d = null;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 0:
        jj_consume_token(0);
      {if (true) return null;}
        break;
      case CLASS:
        l = classlist(g);
        try {
          jj_consume_token(0);
        {if (true) return l;}
        } catch (ParseException e) {
       consumeUntil(g, e, "program");
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 0:
        case CLASS:
          d = program();
          break;
        default:
          jj_la1[0] = jj_gen;
          ;
        }
  {if (true) return l;}
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("program");
    }
  }

  final public ListNode classlist(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("classlist");
    try {
  RecoverySet f = First.classlist.union(g);
  ClassDeclNode c = null;
  ListNode l = null;
      c = classdecl(f);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        l = classlist(g);
        break;
      default:
        jj_la1[2] = jj_gen;
        ;
      }
  {if (true) return new ListNode(c, l);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("classlist");
    }
  }

  final public ClassDeclNode classdecl(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("classdecl");
    try {
  Token t = null, n = null, e1 = null;
  ClassBodyNode c = null;
      try {
        t = jj_consume_token(CLASS);
        n = jj_consume_token(IDENT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case EXTENDS:
          jj_consume_token(EXTENDS);
          e1 = jj_consume_token(IDENT);
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        c = classbody(g);
        {if (true) return new ClassDeclNode(t, n, e1, c);}
      } catch (ParseException e) {
    consumeUntil(g, e, "classdecl");
    {if (true) return new ClassDeclNode(t, n, e1, c);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("classdecl");
    }
  }

  final public ClassBodyNode classbody(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("classbody");
    try {
  RecoverySet f2 = new RecoverySet(SEMICOLON).union(g).remove(IDENT),
            f3 = First.methoddecl.union(g).remove(IDENT),
            f4 = First.constructdecl.union(f3).remove(IDENT),
            f5 = First.vardecl.union(f4).remove(IDENT);

  ListNode c = null,
                        v = null,
                        ct = null,
                        m = null;
  VarDeclNode vd;
  ConstructDeclNode cd;
  MethodDeclNode md;
  Token t = null;
      try {
        t = jj_consume_token(LBRACE);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CLASS:
          c = classlist(f5);
          break;
        default:
          jj_la1[4] = jj_gen;
          ;
        }
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case VAR:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_1;
          }
          vd = vardecl(f2);
          jj_consume_token(SEMICOLON);
                  if ( v == null )
                        v = new ListNode(vd);
                  else
                        v.add(vd);
        }
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case CONSTRUCTOR:
            ;
            break;
          default:
            jj_la1[6] = jj_gen;
            break label_2;
          }
          cd = constructdecl(f4);
                  if ( ct == null)
              ct = new ListNode(cd);
          else
              ct.add(cd);
        }
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INT:
          case STRING:
          case BOOLEAN:
          case VOID:
          case IDENT:
            ;
            break;
          default:
            jj_la1[7] = jj_gen;
            break label_3;
          }
          md = methoddecl(f3);
                  if ( m == null)
              m = new ListNode(md);
          else
              m.add(md);
        }
        jj_consume_token(RBRACE);
        {if (true) return new ClassBodyNode(t, c, v, ct, m);}
      } catch (ParseException e) {
   consumeUntil(g, e, "classbody");
   {if (true) return new ClassBodyNode(t, c, v, ct, m);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("classbody");
    }
  }

  final public VarDeclNode vardecl(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("vardecl");
    try {
 Token t1 = null, t2 = null;
 int k = 0;
 ListNode l = null;
      try {
        jj_consume_token(VAR);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
          t1 = jj_consume_token(INT);
          break;
        case STRING:
          t1 = jj_consume_token(STRING);
          break;
        case IDENT:
          t1 = jj_consume_token(IDENT);
          break;
        case BOOLEAN:
          t1 = jj_consume_token(BOOLEAN);
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        t2 = jj_consume_token(IDENT);
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LBRACKET:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_4;
          }
          jj_consume_token(LBRACKET);
          jj_consume_token(RBRACKET);
                                          k++;
        }
     l = new ListNode(new VarNode(t2, k));
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case COMMA:
            ;
            break;
          default:
            jj_la1[10] = jj_gen;
            break label_5;
          }
          jj_consume_token(COMMA);
             k = 0;
          t2 = jj_consume_token(IDENT);
          label_6:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LBRACKET:
              ;
              break;
            default:
              jj_la1[11] = jj_gen;
              break label_6;
            }
            jj_consume_token(LBRACKET);
            jj_consume_token(RBRACKET);
                                                             k++;
          }
          l.add(new VarNode(t2, k));
        }
    {if (true) return new VarDeclNode(t1, l);}
      } catch (ParseException e) {
   consumeUntil(g, e, "vardecl");
   {if (true) return new VarDeclNode(t1, l);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("vardecl");
    }
  }

  final public ConstructDeclNode constructdecl(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("constructdecl");
    try {
  Token t = null;
  MethodBodyNode m = null;
      try {
        t = jj_consume_token(CONSTRUCTOR);
        m = methodbody(g);
     {if (true) return new ConstructDeclNode(t, m);}
      } catch (ParseException e) {
   consumeUntil(g, e, "constructdecl");
   {if (true) return new ConstructDeclNode(t, m);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("constructdecl");
    }
  }

  final public MethodDeclNode methoddecl(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("methoddecl");
    try {
  Token t1 = null,
        t2 = null;
  int k = 0;
  MethodBodyNode m = null;
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
          t1 = jj_consume_token(INT);
          break;
        case STRING:
          t1 = jj_consume_token(STRING);
          break;
        case IDENT:
          t1 = jj_consume_token(IDENT);
          break;
        case BOOLEAN:
          t1 = jj_consume_token(BOOLEAN);
          break;
        case VOID:
          t1 = jj_consume_token(VOID);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case LBRACKET:
            ;
            break;
          default:
            jj_la1[13] = jj_gen;
            break label_7;
          }
          jj_consume_token(LBRACKET);
          jj_consume_token(RBRACKET);
                            k++;
        }
        t2 = jj_consume_token(IDENT);
        m = methodbody(g);
     {if (true) return new MethodDeclNode(t1, k, t2, m);}
      } catch (ParseException e) {
        consumeUntil(g, e, "methoddecl");
        {if (true) return new MethodDeclNode(t1, k, t2, m);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("methoddecl");
    }
  }

  final public MethodBodyNode methodbody(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("methodbody");
    try {
Token t1 = null;
ListNode l = null;
StatementNode s = null;

RecoverySet f = new RecoverySet(RPAREN).union(g);
      try {
        t1 = jj_consume_token(LPAREN);
        l = paramlist(f);
        jj_consume_token(RPAREN);
        s = statement(g);
        {if (true) return new MethodBodyNode(t1, l, s);}
      } catch (ParseException e) {
   consumeUntil(g, e, "methodbody");
   {if (true) return new MethodBodyNode(t1, l, s);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("methodbody");
    }
  }

  final public ListNode paramlist(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("paramlist");
    try {
ListNode p = null, q = null;
int k = 0;
Token t1 = null;
Token t2 = null;
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case STRING:
        case BOOLEAN:
        case IDENT:
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INT:
            t1 = jj_consume_token(INT);
            break;
          case STRING:
            t1 = jj_consume_token(STRING);
            break;
          case IDENT:
            t1 = jj_consume_token(IDENT);
            break;
          case BOOLEAN:
            t1 = jj_consume_token(BOOLEAN);
            break;
          default:
            jj_la1[14] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
          t2 = jj_consume_token(IDENT);
          label_8:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case LBRACKET:
              ;
              break;
            default:
              jj_la1[15] = jj_gen;
              break label_8;
            }
            jj_consume_token(LBRACKET);
            jj_consume_token(RBRACKET);
                             k++;
          }
         q = new ListNode(new VarNode(t2, k));
     p = new ListNode(new VarDeclNode(t1, q));
          label_9:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case COMMA:
              ;
              break;
            default:
              jj_la1[16] = jj_gen;
              break label_9;
            }
            jj_consume_token(COMMA);
                 k = 0;
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case INT:
              t1 = jj_consume_token(INT);
              break;
            case STRING:
              t1 = jj_consume_token(STRING);
              break;
            case IDENT:
              t1 = jj_consume_token(IDENT);
              break;
            case BOOLEAN:
              t1 = jj_consume_token(BOOLEAN);
              break;
            default:
              jj_la1[17] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            t2 = jj_consume_token(IDENT);
            label_10:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case LBRACKET:
                ;
                break;
              default:
                jj_la1[18] = jj_gen;
                break label_10;
              }
              jj_consume_token(LBRACKET);
              jj_consume_token(RBRACKET);
                                            k ++;
            }
         q = new ListNode(new VarNode(t2, k));
         p.add(new VarDeclNode(t1, q));
          }
          break;
        default:
          jj_la1[19] = jj_gen;
          ;
        }
       {if (true) return p;}
      } catch (ParseException e) {
   consumeUntil(g, e, "paramlist");
   {if (true) return null;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("paramlist");
    }
  }

  final public StatementNode statement(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("statement");
    try {
StatementNode s = null;
ListNode l;
Token t1 = null;

RecoverySet f1 = new RecoverySet(SEMICOLON).union(g).remove(IDENT);
RecoverySet f2 = new RecoverySet(RBRACE).union(g).remove(IDENT);
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VAR:
          s = vardecl(f1);
          jj_consume_token(SEMICOLON);
          break;
        case IDENT:
          s = atribstat(f1);
          jj_consume_token(SEMICOLON);
          break;
        case PRINT:
          s = printstat(f1);
          jj_consume_token(SEMICOLON);
          break;
        case READ:
          s = readstat(f1);
          jj_consume_token(SEMICOLON);
          break;
        case RETURN:
          s = returnstat(f1);
          jj_consume_token(SEMICOLON);
          break;
        case SUPER:
          s = superstat(f1);
          jj_consume_token(SEMICOLON);
          break;
        case IF:
          s = ifstat(g);
          break;
        case FOR:
          s = forstat(g);
          break;
        case WHILE:
          s = whilestat(g);
          break;
        case SWITCH:
          s = switchstat(g);
          break;
        case LBRACE:
          t1 = jj_consume_token(LBRACE);
          l = statlist(f2);
          jj_consume_token(RBRACE);
                                              s = new BlockNode(t1, l);
          break;
        case BREAK:
          t1 = jj_consume_token(BREAK);
          jj_consume_token(SEMICOLON);
                               s = new BreakNode(t1);
          break;
        case SEMICOLON:
          t1 = jj_consume_token(SEMICOLON);
                       s = new NopNode(t1);
          break;
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
  {if (true) return s;}
      } catch (ParseException e) {
   consumeUntil(g, e, "statement");
   {if (true) return new NopNode(t1);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("statement");
    }
  }

  final public AtribNode atribstat(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("atribstat");
    try {
ExpreNode e1 = null, e2 = null;
Token t1 = null;
ConditionalNode c1 = null;

RecoverySet f1 = new RecoverySet(ASSIGN).union(g);
      try {
        e1 = lvalue(f1);
        t1 = jj_consume_token(ASSIGN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          e2 = alocexpression(g);
          break;
        case int_constant:
        case string_constant:
        case null_constant:
        case boolean_constant:
        case IDENT:
        case LPAREN:
        case PLUS:
        case MINUS:
          e2 = expression(g);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case QUESTIONMARK:
            c1 = conditional(g);
            break;
          default:
            jj_la1[21] = jj_gen;
            ;
          }
          break;
        default:
          jj_la1[22] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      {if (true) return new AtribNode(t1, e1, e2, c1);}
      } catch (ParseException e) {
   consumeUntil(g, e, "atribstat");
   {if (true) return new AtribNode(t1, e1, e2, c1);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("atribstat");
    }
  }

  final public ConditionalNode conditional(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("conditional");
    try {
ExpreNode e1 = null, e2 = null;
Token t1 = null;
RecoverySet f1 = new RecoverySet(DDOT).union(g);
      try {
        t1 = jj_consume_token(QUESTIONMARK);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case int_constant:
        case string_constant:
        case null_constant:
        case boolean_constant:
        case IDENT:
        case LPAREN:
        case PLUS:
        case MINUS:
          e1 = expression(f1);
          break;
        case NEW:
          e1 = alocexpression(f1);
          break;
        default:
          jj_la1[23] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(DDOT);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case int_constant:
        case string_constant:
        case null_constant:
        case boolean_constant:
        case IDENT:
        case LPAREN:
        case PLUS:
        case MINUS:
          e2 = expression(f1);
          break;
        case NEW:
          e2 = alocexpression(f1);
          break;
        default:
          jj_la1[24] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
     {if (true) return new ConditionalNode(t1, e1, e2);}
      } catch (ParseException e) {
   consumeUntil(g, e, "conditional");
   {if (true) return new ConditionalNode(t1, e1, e2);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("conditional");
    }
  }

  final public PrintNode printstat(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("printstat");
    try {
ExpreNode e1 = null;
Token t = null;
      try {
        t = jj_consume_token(PRINT);
        e1 = expression(g);
        {if (true) return new PrintNode(t, e1);}
      } catch (ParseException e) {
   consumeUntil(g, e, "printstat");
   {if (true) return new PrintNode(t, e1);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("printstat");
    }
  }

  final public ReadNode readstat(RecoverySet g) throws ParseException, ParseEOFException {
    trace_call("readstat");
    try {
ExpreNode e1 = null;
Token t = null;
      try {
        t = jj_consume_token(READ);
        e1 = lvalue(g);
        {if (true) return new ReadNode(t, e1);}
      } catch (ParseException e) {
   consumeUntil(g, e, "readstat");
   {if (true) return new ReadNode(t, e1);}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("readstat");
    }
  }
